idea inspection enabled on jdk11: Immutable collection creation can be replaced with collection factory call"
This partially reverts commit f5ecfe12d9ee74231586fe04cfeae8bba0a68ac6.